<resources>
    <string name="app_name">Weather</string>
    <string name="city_name">City name</string>
    <string name="cloudiness_vew_desc">Cloudiness</string>
    <string name="wind_view_desc">Windness</string>
    <string name="temperature">+20°C</string>
    <string name="humidity">33%</string>
    <string name="searchCityTextView">Search</string>
    <string name="city_name_autofill">Name</string>
    <string name="extended_info">Extended info</string>
    <string name="settings">Settings</string>
    <string name="fahrenheit_scale">Fahrenheit scale</string>
    <string name="show_wind_params">Show wind params</string>
    <string name="save_settings">Save settings</string>
    <string name="about_city">About city</string>
    <string name="settings_saved">Settings are saved</string>
    <string name="name">Name</string>
    <string name="settings_are_saved">Settings are saved</string>
    <string name="save_settings_answer">Save settings?</string>
    <string name="yes">YES</string>
    <string name="dark_theme">Dark theme</string>
    <string name="recently_cities">Recently cities</string>
    <string name="important_message">Important message!</string>
    <string name="connection_error">Ошибка соединения.</string>
    <string name="ok">ОК</string>
    <string name="ImportantNotify">Important notify</string>
    <string name="NetworkTurnedOn">Network is turned on</string>
    <string name="NetworkTurnedOff">Network is turned off</string>
    <string name="LowBattaryCharge">Low battary charge</string>
    <string name="geolocation">Geolocation</string>
</resources>
